# xmr-wow

./: .gitignore  Cargo.toml  LICENSE  NOTICE  README.md
.github/workflows/: ci.yml
crates/monero-rust/: Cargo.toml
crates/monero-rust/src/: abstractions.rs  chain_config.rs  coin_selection.rs  lib.rs  rpc_serai.rs  scan_coordinator.rs  scanner.rs  tx_builder.rs  tx_prepare.rs  tx_utils.rs  wallet_output.rs  wallet_state.rs
crates/wownero-rust/: Cargo.toml
crates/wownero-rust/src/: abstractions.rs  chain_config.rs  coin_selection.rs  lib.rs  native_impl.rs  rpc_serai.rs  scan_coordinator.rs  scanner.rs  tx_builder.rs  tx_prepare.rs  tx_utils.rs  wallet_state.rs
crates/xmr-wow-client/: Cargo.toml
crates/xmr-wow-client/src/: coord_message.rs  crypto_store.rs  guarantee.rs  lib.rs  main.rs  node_client.rs  protocol_message.rs  readiness.rs  store.rs  swap_messenger.rs  swap_state.rs
crates/xmr-wow-client/tests/: adversarial_messages.rs  e2e_oob_swap.rs  e2e_sharechain_swap.rs  e2e_transport_validation.rs  guarantee_fail_closed.rs  lock_order_enforcement.rs  no_key_in_default_output.rs  node_client_rpc.rs  onchain_invariant.rs  oob_isolation.rs  proof_harness_flag.rs  refund_artifact_contract.rs  refund_readiness.rs  xmr_refund_path.rs
crates/xmr-wow-crypto/: Cargo.toml
crates/xmr-wow-crypto/src/: adaptor.rs  address.rs  derivation.rs  dleq.rs  error.rs  keccak.rs  keysplit.rs  lib.rs
crates/xmr-wow-crypto/src/mnemonic/: mod.rs
crates/xmr-wow-crypto/tests/: adaptor_props.rs  mnemonic_kat.rs
crates/xmr-wow-integration/: Cargo.toml
crates/xmr-wow-integration/src/: lib.rs
crates/xmr-wow-integration/tests/: 01_crypto_unit.rs  02_sharechain_unit.rs  03_full_swap_mock.rs  04_p2pool_compat.rs  05_refund_harness.rs  06_vts_refund_path.rs  07_live_network_harness.rs  08_e2e_regression_matrix.rs
crates/xmr-wow-node/: Cargo.toml
crates/xmr-wow-node/src/: main.rs
crates/xmr-wow-node/tests/: node_smoke.rs
crates/xmr-wow-script/: Cargo.toml
crates/xmr-wow-script/src/: backend.rs  engine.rs  error.rs  lib.rs  opcode.rs
crates/xmr-wow-script/src/scripts/: mod.rs  swap_escrow.rs
crates/xmr-wow-script/tests/: engine_limits.rs  helpers.rs  no_panic.rs  op_checkkeypair.rs  op_cltv.rs  real_crypto_roundtrip.rs  serialization.rs  swap_escrow_script.rs
crates/xmr-wow-sharechain/: Cargo.toml
crates/xmr-wow-sharechain/src/: chain.rs  coord_store.rs  escrow.rs  lib.rs  mm_rpc.rs  share.rs  varint.rs
crates/xmr-wow-sharechain/src/p2p/: handshake.rs  messages.rs  mod.rs  server.rs
crates/xmr-wow-vts/: Cargo.toml
crates/xmr-wow-vts/src/: calibration.rs  error.rs  lib.rs  puzzle.rs  rsa.rs  verify.rs
crates/xmr-wow-wallet/: Cargo.toml
crates/xmr-wow-wallet/src/: error.rs  lib.rs  rpc_transport.rs  trait_def.rs  view_key.rs  wow.rs  xmr.rs
crates/xmr-wow-wallet/tests/: wallet_rpc.rs
docker/: Dockerfile.xmr-wow  README.md  alice-entrypoint.sh  bob-entrypoint.sh  docker-compose.yaml  sharechain-node-entrypoint.sh  validate.sh
docs/: DEPLOYMENT.md
scripts/: README.md  live-happy-path-v2.sh  live-happy-path.sh  live-refund-alice-xmr.sh  live-refund-bob-wow.sh  live-refund-path.sh  live-refund-premature.sh  run-e2e-regression-matrix.sh  run-live-network-harness.sh  run-shadow-cli-scenario.sh  test-harness.sh  wallet-audit-live-scan.sh
scripts/live-network/: RUNBOOK.md  alice.sh  bob.sh  preflight.sh  validate-artifacts.sh
simulations/: README.md  network-partition.yaml  shadow-network-partition.yaml  shadow-sharechain-swap.yaml  shadow-swap.yaml  swap-scenario.yaml
simulations/agents/: swap_agent.py  xmr_wow_cli_agent.py  xmr_wow_sharechain_agent.py
simulations/agents/tests/: test_sharechain_agent_import.py
simulations/artifacts/: xmr_wow_sharechain_result_alice.json  xmr_wow_sharechain_result_bob.json
