[workspace]
members = [
    "crates/xmr-wow-crypto",
    "crates/xmr-wow-script",
    "crates/xmr-wow-sharechain",
    "crates/xmr-wow-node",
    "crates/xmr-wow-client",
    "crates/xmr-wow-integration",
]
resolver = "2"

[workspace.package]
version     = "0.1.0"
edition     = "2021"
license     = "MIT OR Apache-2.0"
authors     = []
publish     = false

[workspace.dependencies]
# Internal crates
xmr-wow-crypto      = { path = "crates/xmr-wow-crypto" }
xmr-wow-script      = { path = "crates/xmr-wow-script" }
xmr-wow-sharechain  = { path = "crates/xmr-wow-sharechain" }
xmr-wow-client      = { path = "crates/xmr-wow-client" }

# Local path deps (modified or vendored)
base58-monero = { path = "deps/base58-monero" }

# Cryptography: versions aligned with p2pool-rs
curve25519-dalek = { version = "4", features = ["rand_core", "digest", "zeroize"] }
ed25519-dalek    = { version = "2" }
tiny-keccak      = { version = "2", features = ["keccak"] }
sha2             = { version = "0.10" }
sha3             = { version = "0.10" }
zeroize          = { version = "1", features = ["derive"] }
hmac             = { version = "0.12" }
rand_core        = { version = "0.6" }
rand             = { version = "0.8" }

# Async runtime
tokio            = { version = "1", features = ["full"] }
tokio-util       = { version = "0.7", features = ["codec", "net"] }
futures          = "0.3"
async-trait      = "0.1"
bytes            = "1"

# Web / RPC
axum             = "0.8"
reqwest          = { version = "0.12", features = ["json"] }

# Serialization
serde            = { version = "1", features = ["derive"] }
serde_json       = "1"
hex              = "0.4"

# Error handling / logging
thiserror        = "2"
anyhow           = "1"
tracing          = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap             = { version = "4", features = ["derive", "env"] }

# Storage
rusqlite         = { version = "0.31", features = ["bundled"] }

# Testing
proptest         = "1"
