[workspace]
members = [
    "crates/xmr-wow-crypto",
    "crates/xmr-wow-script",
    "crates/xmr-wow-sharechain",
    "crates/xmr-wow-node",
    "crates/xmr-wow-client",
    "crates/xmr-wow-integration",
    "crates/monero-rust",
    "crates/wownero-rust",
    "crates/xmr-wow-wallet",
]
resolver = "2"

[workspace.package]
version     = "0.1.0"
edition     = "2021"
license     = "MIT OR Apache-2.0"
authors     = []
publish     = false

[workspace.lints.rust]

[workspace.lints.clippy]

[workspace.dependencies]
# Internal crates
xmr-wow-crypto      = { path = "crates/xmr-wow-crypto" }
xmr-wow-script      = { path = "crates/xmr-wow-script" }
xmr-wow-sharechain  = { path = "crates/xmr-wow-sharechain" }
xmr-wow-client      = { path = "crates/xmr-wow-client" }
xmr-wow-wallet      = { path = "crates/xmr-wow-wallet" }

# Local path deps (modified or vendored)
# cuprate-simnet and wownero-simnet remain standalone manifests for test isolation,
# and their XMR-side monero-oxide graph is patched to the published compatibility fork.
# simnet-testbed stays standalone for the same reason and builds via its own manifest.
base58-monero = { path = "deps/base58-monero", default-features = false }
polyseed     = { path = "deps/polyseed" }
monero-oxide  = { git = "https://github.com/sneurlax/monero-oxide", rev = "f9afcdda9e463ed2a94821265929acf60fa57346" }
monero-rust   = { path = "crates/monero-rust" }
wownero-rust  = { path = "crates/wownero-rust" }
wownero-oxide = { path = "deps/wownero-oxide/monero-oxide" }

# Cryptography: versions aligned with p2pool-rs
curve25519-dalek = { version = "4", features = ["rand_core", "digest", "zeroize"] }
ed25519-dalek    = { version = "2" }
tiny-keccak      = { version = "2", default-features = false, features = ["keccak"] }
sha2             = { version = "0.10", default-features = false }
sha3             = { version = "0.10", default-features = false }
zeroize          = { version = "1", default-features = false, features = ["derive"] }
hmac             = { version = "0.12", default-features = false }
rand_core        = { version = "0.6", default-features = false }
rand             = { version = "0.8" }

# Async runtime
tokio            = { version = "1", features = ["full"] }
tokio-util       = { version = "0.7", features = ["codec", "net"] }
futures          = "0.3"
async-trait      = "0.1"
bytes            = "1"

# Web / RPC
axum             = "0.8"
reqwest          = { version = "0.12", features = ["json"] }

# Serialization
serde            = { version = "1", default-features = false, features = ["derive"] }
serde_json       = "1"
hex              = { version = "0.4", default-features = false, features = ["alloc"] }

# Error handling / logging
thiserror        = "2"
anyhow           = "1"
tracing          = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
parking_lot      = "0.12"

# CLI
clap             = { version = "4", features = ["derive", "env"] }

# Storage
rusqlite         = { version = "0.31", features = ["bundled"] }

# Encryption (secret persistence)
argon2           = "0.5"
aes-gcm          = "0.10"
base64           = "0.22"
rpassword        = "7"

# Checksums
crc              = "3"

# Testing
proptest         = "1"
