[package]
name        = "xmr-wow-client"
description = "XMR<->WOW atomic swap CLI client"
version.workspace   = true
edition.workspace   = true
license.workspace   = true
publish.workspace   = true

[[bin]]
name = "xmr-wow"
path = "src/main.rs"

[lib]
name = "xmr_wow_client"
path = "src/lib.rs"

[dependencies]
xmr-wow-crypto     = { workspace = true }
xmr-wow-sharechain = { workspace = true }

tokio              = { workspace = true }
clap               = { workspace = true }
reqwest            = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
hex                = { workspace = true }
thiserror          = { workspace = true }
anyhow             = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
rusqlite           = { workspace = true }
rand               = { workspace = true }
rand_core          = { workspace = true }
curve25519-dalek   = { workspace = true }
argon2             = { workspace = true }
aes-gcm            = { workspace = true }
base64             = { workspace = true }
rpassword          = { workspace = true }
xmr-wow-wallet     = { workspace = true }

[dev-dependencies]
axum = { workspace = true }
