[package]
name        = "xmr-wow-client"
description = "XMR<->WOW atomic swap CLI client"
version.workspace   = true
edition.workspace   = true
license.workspace   = true
publish.workspace   = true

[[bin]]
name = "xmr-wow"
path = "src/main.rs"

[lib]
name = "xmr_wow_client"
path = "src/lib.rs"

[dependencies]
xmr-wow-crypto     = { workspace = true }
xmr-wow-sharechain = { workspace = true }

tokio              = { workspace = true }
clap               = { workspace = true }
reqwest            = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
hex                = { workspace = true }
thiserror          = { workspace = true }
anyhow             = { workspace = true }
async-trait        = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
rusqlite           = { workspace = true }
rand               = { workspace = true }
rand_core          = { workspace = true }
curve25519-dalek   = { workspace = true }
argon2             = { workspace = true }
aes-gcm            = { workspace = true }
zeroize            = { workspace = true }
base64             = { workspace = true }
rpassword          = { workspace = true }
xmr-wow-wallet     = { workspace = true }

[[test]]
name = "adversarial_messages"
path = "tests/adversarial_messages.rs"

[[test]]
name = "lock_order_enforcement"
path = "tests/lock_order_enforcement.rs"

[[test]]
name = "no_key_in_default_output"
path = "tests/no_key_in_default_output.rs"

[[test]]
name = "onchain_invariant"
path = "tests/onchain_invariant.rs"

[[test]]
name = "oob_isolation"
path = "tests/oob_isolation.rs"

[dev-dependencies]
axum = { workspace = true }
