[package]
name        = "xmr-wow-crypto"
description = "Cryptographic primitives for XMR<->WOW atomic swaps: keysplit, DLEQ, adaptor signatures, address encoding"
version.workspace   = true
edition.workspace   = true
license.workspace   = true
publish.workspace   = true

[features]
default = []

[dependencies]
curve25519-dalek = { workspace = true }
rand_core        = { workspace = true, default-features = false }
rand             = { workspace = true, optional = true }
sha2             = { workspace = true, default-features = false }
zeroize          = { workspace = true, default-features = false }
thiserror        = { workspace = true }
serde            = { workspace = true, default-features = false }
tiny-keccak      = { workspace = true, default-features = false }
hmac             = { workspace = true, default-features = false }
crc              = { workspace = true }
polyseed         = { workspace = true }

[dev-dependencies]
rand     = { workspace = true }
proptest = { workspace = true }
