[package]
name        = "xmr-wow-integration"
description = "Integration tests for the XMR<->WOW swap sharechain"
version.workspace   = true
edition.workspace   = true
license.workspace   = true
publish.workspace   = true

[lib]
name = "xmr_wow_integration"
path = "src/lib.rs"

[dependencies]
xmr-wow-crypto     = { workspace = true }
xmr-wow-script     = { workspace = true, features = ["stub-crypto"] }
xmr-wow-sharechain = { workspace = true }
xmr-wow-client     = { workspace = true }
xmr-wow-wallet     = { workspace = true }

tokio              = { workspace = true }
axum               = { workspace = true }
tower              = "0.5"
serde_json         = { workspace = true }
hex                = { workspace = true }
anyhow             = { workspace = true }
tracing            = { workspace = true }
rand               = { workspace = true }
curve25519-dalek   = { workspace = true }
bytes              = { workspace = true }

[dev-dependencies]
simnet-testbed     = { path = "../../deps/simnet-testbed" }
tempfile           = "3"
