[package]
name        = "xmr-wow-integration"
description = "Integration tests for the XMR<->WOW swap sharechain"
version.workspace   = true
edition.workspace   = true
license.workspace   = true
publish.workspace   = true

# cargo-udeps: anyhow, curve25519-dalek, xmr-wow-client, xmr-wow-crypto, and
# xmr-wow-wallet are used in the integration test binaries (tests/*.rs) but
# not in lib.rs. They are normal (not dev) deps because the test harnesses
# build against the lib target which must re-export them. False positive.
[package.metadata.cargo-udeps.ignore]
normal = ["anyhow", "curve25519-dalek", "xmr-wow-client", "xmr-wow-crypto", "xmr-wow-wallet"]

[lib]
name = "xmr_wow_integration"
path = "src/lib.rs"

[dependencies]
xmr-wow-crypto     = { workspace = true }
xmr-wow-sharechain = { workspace = true }
xmr-wow-client     = { workspace = true }
xmr-wow-wallet     = { workspace = true }

tokio              = { workspace = true }
axum               = { workspace = true }
tower              = "0.5"
serde_json         = { workspace = true }
hex                = { workspace = true }
anyhow             = { workspace = true }
tracing            = { workspace = true }
rand               = { workspace = true }
curve25519-dalek   = { workspace = true }
bytes              = { workspace = true }

[dev-dependencies]
simnet-testbed     = { path = "../../deps/simnet-testbed" }
tempfile           = "3"
