[package]
name        = "xmr-wow-node"
description = "XMR<->WOW swap sharechain node: P2P server, merge mining RPC, client JSON-RPC"
version.workspace   = true
edition.workspace   = true
license.workspace   = true
publish.workspace   = true

[[bin]]
name = "xmr-wow-node"
path = "src/main.rs"

[dependencies]
xmr-wow-sharechain = { workspace = true }

tokio              = { workspace = true }
axum               = { workspace = true }
clap               = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow             = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }

[dev-dependencies]
# No external dev-dependencies needed: node_smoke.rs uses only std (blocking HTTP, process::Command)
