[package]
name        = "xmr-wow-script"
description = "Minimal auditable opcode VM for XMR<->WOW swap escrow scripts"
version.workspace   = true
edition.workspace   = true
license.workspace   = true
publish.workspace   = true

[features]
default     = []
stub-crypto = []
real-crypto = ["dep:curve25519-dalek", "dep:ed25519-dalek"]

[dependencies]
thiserror        = { workspace = true }
serde            = { workspace = true }
sha2             = { workspace = true }
curve25519-dalek = { workspace = true, optional = true }
ed25519-dalek    = { workspace = true, optional = true }

[dev-dependencies]
hex      = { workspace = true }
proptest = { workspace = true }

[[test]]
name = "helpers"
required-features = ["stub-crypto"]

[[test]]
name = "op_checkkeypair"
required-features = ["stub-crypto"]

[[test]]
name = "op_cltv"
required-features = ["stub-crypto"]

[[test]]
name = "swap_escrow_script"
required-features = ["stub-crypto"]

[[test]]
name = "engine_limits"
required-features = ["stub-crypto"]

[[test]]
name = "no_panic"
required-features = ["stub-crypto"]

[[test]]
name = "serialization"
required-features = ["stub-crypto"]
