[package]
name        = "xmr-wow-sharechain"
description = "P2pool-compatible swap sharechain: gossip protocol, SwapShare format, escrow state machine, merge mining RPC"
version.workspace   = true
edition.workspace   = true
license.workspace   = true
publish.workspace   = true

[features]
default       = []
real-crypto   = ["xmr-wow-script/real-crypto"]

[dependencies]
xmr-wow-crypto  = { workspace = true }
xmr-wow-script  = { workspace = true, features = ["real-crypto"] }

tiny-keccak      = { workspace = true }
curve25519-dalek = { workspace = true }
ed25519-dalek    = { workspace = true }

tokio            = { workspace = true }
tokio-util       = { workspace = true }
futures          = { workspace = true }
async-trait      = { workspace = true }
bytes            = { workspace = true }

axum             = { workspace = true }
serde            = { workspace = true }
serde_json       = { workspace = true }
hex              = { workspace = true }
thiserror        = { workspace = true }
anyhow           = { workspace = true }
tracing          = { workspace = true }
rand             = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
