[package]
name        = "xmr-wow-sharechain"
description = "P2pool-compatible swap sharechain: gossip protocol, SwapShare format, escrow state machine, merge mining RPC"
version.workspace   = true
edition.workspace   = true
license.workspace   = true
publish.workspace   = true

# cargo-udeps: anyhow, async-trait, curve25519-dalek, ed25519-dalek, futures,
# xmr-wow-crypto, and xmr-wow-script are scaffolded for the escrow verification
# layer (sharechain-mediated adaptor-sig and script verification).  They are
# intentionally unused in the current advisory-only model.
[package.metadata.cargo-udeps.ignore]
normal = ["anyhow", "async-trait", "curve25519-dalek", "ed25519-dalek", "futures", "xmr-wow-crypto", "xmr-wow-script"]

[features]
default       = []
real-crypto   = ["xmr-wow-script/real-crypto"]

[dependencies]
xmr-wow-crypto  = { workspace = true }
xmr-wow-script  = { workspace = true, features = ["real-crypto"] }

tiny-keccak      = { workspace = true }
curve25519-dalek = { workspace = true }
ed25519-dalek    = { workspace = true }

tokio            = { workspace = true }
tokio-util       = { workspace = true }
futures          = { workspace = true }
async-trait      = { workspace = true }
bytes            = { workspace = true }

axum             = { workspace = true }
serde            = { workspace = true }
serde_json       = { workspace = true }
hex              = { workspace = true }
thiserror        = { workspace = true }
anyhow           = { workspace = true }
tracing          = { workspace = true }
rand             = { workspace = true }
parking_lot      = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tower = { version = "0.5", features = ["util"] }
